--- a/MemoryCardGame/Pages/Index.razor
+++ b/MemoryCardGame/Pages/Index.razor
@@ -12,7 +12,7 @@
         </div>
         @if (gameOver)
         {
-            <p class="game-font status">You won in @moves moves!</p>
+            <p class="game-font status" style="font-size: 0.6rem;">You won in @moves moves!</p>
         }
         <div class="game-container" style="grid-template-columns: repeat(4, auto);">
             @foreach (int i in intArr)
